Fix: the brand height and addd a scrollbar instead

--- a/template/web/css/plugins.css
+++ b/template/web/css/plugins.css
@@ -3456,7 +3456,6 @@ input[type=submit].btn-block {
     background-clip: padding-box;
     border: 1px solid rgba(0, 0, 0, .15);
     border-radius: .25rem;
-    background: red;
     max-height: 50vh;
     overflow-y: auto;
 }
